--- a/html_advanced/31-index.html
+++ b/html_advanced/31-index.html
@@ -159,8 +159,7 @@
     <!-- Footer -->
     <footer>
       <adress>
-	234 Washington Street<br>
-	Urbana, Illinois
+	234 Washington Street<br>Urbana, Illinois
       </adress>
       <div>
 	<ul>
