--- a/html_advanced/31-index.html
+++ b/html_advanced/31-index.html
@@ -158,9 +158,7 @@
     <br>
     <!-- Footer -->
     <footer>
-      <adress>
-	234 Washington Street<br>Urbana, Illinois
-      </adress>
+      <address>234 Washington Street<br>Urbana, Illinois</address>
       <div>
 	<ul>
 	  <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
