--- a/html_advanced/32-styleguide.html
+++ b/html_advanced/32-styleguide.html
@@ -93,7 +93,8 @@
 	  <h2>Typography</h2>
 	</header>
 	<div>
-	  <adress>320 Stewart Avenue, Unit 12<br>New York City NY 10001</adress>
+	  <adress>320 Stewart Avenue, Unit 12<br>
+	    New York City NY 10001</adress>
 	</div>
 	<div>
             <pre>
@@ -104,7 +105,7 @@
 	    </pre>
         </div>
 	<div>
-	  Curabitur sit amet turpis cursus massa mollis <mark>highlighted</mark>. Duis finibus leo massa, eget dapibus erat finibus sed. Aenean condimentum sapien magna, eleifend <mark>highlighted</mark> mi consequat ut. Cras nec quam sed sapien ultricies <mark>highlighted</mark> ut sed metus.
+	  <p>Curabitur sit amet turpis cursus massa mollis <mark>highlighted</mark>. Duis finibus leo massa, eget dapibus erat finibus sed. Aenean condimentum sapien magna, eleifend <mark>highlighted</mark> mi consequat ut. Cras nec quam sed sapien ultricies <mark>highlighted</mark> ut sed metus.</p>
 	</div>
       </section>
     </main>
