--- a/html_advanced/32-styleguide.html
+++ b/html_advanced/32-styleguide.html
@@ -93,8 +93,8 @@
 	  <h2>Typography</h2>
 	</header>
 	<div>
-	  <adress>320 Stewart Avenue, Unit 12<br>
-	    New York City NY 10001</adress>
+	  <address>320 Stewart Avenue, Unit 12<br>
+                    New York City NY 10001</address>
 	</div>
 	<div>
             <pre>
