--- a/html_advanced/36-index.html
+++ b/html_advanced/36-index.html
@@ -71,11 +71,11 @@
 	      <a href="#"><h3>Interior Design</a></h3>
 	    </article>
 	    <article>
-	      <img src="./images/pic-work-02.jpg" alt="">
+	      <div><img src="./images/pic-work-02.jpg" alt=""></div>
 	      <a href="#"><h3>Web Development</a></h3>
 	    </article>
 	    <article>
-	      <img src="./images/pic-work-03.jpg" alt ="">
+	      <div><img src="./images/pic-work-03.jpg" alt =""></div>
 	      <a href="#"><h3>Personal Brand</a></h3>
 	    </article>
 	  </div>	  
@@ -90,7 +90,7 @@
 	    <p>Everything about us</p>
 	  </header>
 	  <div>
-	    <img src="./images/pic-about-us.jpg" alt="" width="305" height="205">
+	    <img src="./images/pic-about-us.jpg" alt="" width="460" height="447">
 	    <h3>Who are we</h3>
 	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
 	    <h3>Our culture</h3>
